--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "echarts": "^4.2.1",
     "element-ui": "^2.12.0",
     "gojs": "^1.8.38",
+    "jquery": "^3.4.1",
+    "jsplumb": "^2.12.0",
     "qs": "^6.6.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-task-node": "^1.4.0",
+    "vuedraggable": "^2.23.2",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
