--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "echarts": "^4.4.0",
     "element-ui": "^2.12.0",
     "gojs": "^1.8.38",
+    "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.4.1",
+    "jspdf": "^1.5.3",
     "jsplumb": "^2.12.0",
     "qs": "^6.6.0",
     "vue": "^2.5.2",
